# cmake_rpm_learning

./: .gitignore  CMakeLists.txt  README.md  add.c  main.c
